// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application Resolver Correctly Resolves Application Query 1`] = `
Object {
  "data": Object {
    "applications": Array [
      Object {
        "_uid": "local-cluster/29a848d6-3de8-11ea-9f0f-00000a100f99",
        "clusterCount": 5,
        "created": "2020-01-23T13:56:32Z",
        "dashboard": "localhost/grafana/dashboard/db/app01-dashboard-via-federated-prometheus?namespace=sample",
        "hubSubscriptions": Array [
          Object {
            "_uid": "local-cluster/bdced01f-3bd4-11ea-a488-00000a100f99",
            "channel": "dev1/dev1",
            "status": null,
          },
          Object {
            "_uid": "local-cluster/b218636d-3d5e-11ea-8ed1-00000a100f99",
            "channel": "default/mortgage-channel",
            "status": "Propagated",
          },
          Object {
            "_uid": "local-cluster/66426f24-3bd3-11ea-a488-00000a100f99",
            "channel": "dev1/dev1",
            "status": "Propagated",
          },
        ],
        "labels": Array [
          "label1=value1",
          "label2=value2",
        ],
        "name": "app01",
        "namespace": "sample",
        "podStatusCount": Object {
          "Failed": 1,
          "Running": 2,
        },
        "remoteSubscriptionStatusCount": Object {
          "Subscribed": 1,
        },
        "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/sample/applications/app01",
      },
      Object {
        "_uid": "local-cluster/app-02-uid",
        "clusterCount": 0,
        "created": "2020-01-23T13:56:32Z",
        "dashboard": "localhost/grafana/dashboard/db/app02-dashboard-via-federated-prometheus?namespace=test",
        "hubSubscriptions": Array [],
        "labels": Array [],
        "name": "app02",
        "namespace": "test",
        "podStatusCount": Object {},
        "remoteSubscriptionStatusCount": Object {},
        "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/test/applications/app02",
      },
    ],
  },
}
`;

exports[`Application Resolver Correctly Resolves Single Application 1`] = `
Object {
  "data": Object {
    "applications": Array [
      Object {
        "_uid": "local-cluster/app-02-uid",
        "clusterCount": 0,
        "created": "2020-01-23T13:56:32Z",
        "dashboard": "localhost/grafana/dashboard/db/app02-dashboard-via-federated-prometheus?namespace=test",
        "hubSubscriptions": Array [],
        "labels": Array [],
        "name": "app02",
        "namespace": "test",
        "podStatusCount": Object {},
        "remoteSubscriptionStatusCount": Object {},
        "selfLink": "/apis/app.k8s.io/v1beta1/namespaces/test/applications/app02",
      },
    ],
  },
}
`;

exports[`Application Resolver Ignores filters when only name or namespace is passed. 1`] = `
Object {
  "data": Object {
    "applications": Array [
      Object {
        "_uid": "local-cluster/29a848d6-3de8-11ea-9f0f-00000a100f99",
        "name": "app01",
      },
      Object {
        "_uid": "local-cluster/app-02-uid",
        "name": "app02",
      },
    ],
  },
}
`;

exports[`Global Application Resolver Correctly Resolves Global Application Data 1`] = `
Object {
  "data": Object {
    "globalAppData": Object {
      "channelsCount": 2,
      "clusterCount": 2,
      "hubSubscriptionCount": 2,
      "remoteSubscriptionStatusCount": Object {
        "Propagated": 1,
        "Subscribed": 1,
      },
    },
  },
}
`;
